[FEATURE] USERLOGIN - Passport-local + Bcrypt + MongoDB // Login Form // Angular+Express Routing

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,8 +3,9 @@
     <li class="active"><a>Home</a></li>
     <li><a>Blimps</a></li>
     <li><a>Settings</a></li>
+    <li><a ng-click="go('/logout')">Logout</a></li>
   </ul>
-  <h3 class="text-muted">blimp IO</h3>
+  <h3 class="text-muted">blimpIO</h3>
 </div>
 
 <div class="jumbotron">
