[Styling] changed default text in loginform to "blimp / blimp" // hid "Create account" // renamed login.js

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,10 @@
+body {
+    color:#333;
+}
+
+.text-grey { color:#999; }
+.text-lgrey { color:#ccc; }
+
 /* ==============================================================================
    Original Stylings
 =============================================================================== */
