--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-            <!--<h1 class="text-center login-title">blimpIO</h1>-->
+            <h1 class="text-center login-title">blimpIO</h1>
             <div class="account-wall">
                 <img class="profile-img" src="img/user.png" alt="">
                 <form class="form-signin" ng-submit="login()">
-                    <input type="text" ng-model="userdata.username" class="form-control" placeholder="Email" required autofocus>
-                    <input type="password" ng-model="userdata.password" class="form-control" placeholder="Password" required>
+                    <input type="text" ng-model="userdata.username" class="form-control" placeholder="blimp" required autofocus>
+                    <input type="password" ng-model="userdata.password" class="form-control" placeholder="blimp" required>
                     <button class="btn btn-lg btn-primary btn-block" type="submit">
                         Sign in</button>
                     <label class="checkbox pull-left">
@@ -16,7 +16,7 @@
                     <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
                 </form>
             </div>
-            <a href="#" class="text-center new-account">Create an account </a>
+            <!--<a href="#" class="text-center new-account">Create an account </a>-->
         </div>
     </div>
 </div>
