[Styling] Main-page logo made smaller + positioning // set static <title>

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -16,8 +16,14 @@ body {
 }
 
 .logo.main {
-    width:210px;
-    height:60px;
+    margin:0px 0 14px 10px;
+    width:200px;
+    height:38px;
+    background-position: 0px 6px;
+}
+
+.header .nav {
+    margin-bottom: 10px;
 }
 
 /* ==============================================================================
