--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -31,6 +31,7 @@ body {
     color:#000;
     font-size: 1.2em;
     font-weight:bold;
+    cursor:default;
 }
 .nav-pills a,
 .nav-pills a:active,
@@ -39,6 +40,7 @@ body {
     color: #999;
     font-size:1.1em;
     line-height:24px;
+    cursor:pointer;
 }
 
 .nav>li>a:hover, .nav>li>a:focus {
