[Update] User Management // default user is now only created on empty collection // removed obsolte repopulate function  // [Styling] changed LOGIN placeholders

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,6 +8,11 @@ body {
 
 .clickable { cursor: pointer;}
 
+.btn.btn-grey {
+    background:#eee;
+    color:#333;
+}
+
 .logo {
   background: url(../img/logo.svg) 0 0 no-repeat;
   background-size: 100%;
