--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,7 @@
+/* ==============================================================================
+   Personal Stylings
+=============================================================================== */
+
 body {
     color: #333;
 }
@@ -55,6 +59,7 @@ body {
     color: #555;
     font-size: 1.1em;
 }
+
 
 /* ==============================================================================
    Original Stylings
@@ -139,6 +144,7 @@ body {
     border-bottom: 0;
   }
 }
+
 
 /* ==============================================================================
    Login Form
