--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,6 +12,8 @@ body {
 
 .clickable { cursor: pointer;}
 
+a.text-decor-none, a:active.text-decor-none, a:hover.text-decor-none, a:visited.text-decor-none { text-decoration:none; }
+
 .btn.btn-grey {
     background:#eee;
     color:#333;
@@ -60,6 +62,14 @@ body {
     font-size: 1.1em;
 }
 
+.blimp-container {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+label {
+    text-indent: 1px;
+}
 
 /* ==============================================================================
    Original Stylings
@@ -82,6 +92,7 @@ body {
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
+  margin-bottom:40px;
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
@@ -93,6 +104,7 @@ body {
 
 /* Custom page footer */
 .footer {
+  margin-top:40px;
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
@@ -120,7 +132,7 @@ body {
 
 /* Supporting marketing content */
 .marketing {
-  margin: 40px 0;
+  margin: 0;
 }
 .marketing p + h4 {
   margin-top: 28px;
