--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -30,36 +30,62 @@ a.text-decor-none, a:active.text-decor-none, a:hover.text-decor-none, a:visited.
 }
 
 .logo.main {
-    margin: 0px 0 14px 10px;
-    width: 200px;
-    height: 38px;
+    margin: -5px 0px -20px 0px;
+    width: 160px;
+    height: 44px;
     background-position: 0px 6px;
 }
 
-.header .nav {
-    margin-bottom: 10px;
+.navbar-nav > li > a {
+    color: #999;
 }
 
-.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
+.navbar-nav > li > a:active,
+.navbar-nav > li > a:hover,
+.navbar-nav > li > a:focus {
+    color: #555;
+}
+
+.navbar-nav > li:hover {
+    background:#f1f1f1;
+}
+
+.navbar-nav > li.active > a,
+.navbar-nav > li.active > a:hover,
+.navbar-nav > li.active > a:focus {
     background: none;
-    color: #000;
-    font-size: 1.2em;
+    color: #555;
     font-weight: bold;
     cursor: default;
 }
-.nav-pills a,
-.nav-pills a:active,
-.nav-pills a:focus,
-.nav-pills a:hover {
-    color: #999;
-    font-size: 1.1em;
-    line-height: 24px;
+
+.navbar-nav > li {
     cursor: pointer;
 }
 
-.nav>li>a:hover, .nav>li>a:focus {
-    color: #555;
-    font-size: 1.1em;
+.navbar {
+    background: none;
+    border:none;
+    padding:1px;
+}
+
+.navbar-default .navbar-toggle {
+    border-color:#333;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color:#333;
+}
+
+@media (max-width:767px) {
+    .navbar {
+        margin-bottom: 0px;
+    }
+    .navbar-header {
+        margin-bottom:20px;
+    }
+    .navbar-nav {
+        margin-top:10px;
+    }
 }
 
 .blimp-container {
@@ -242,4 +268,47 @@ body {
 {
     display: block;
     margin-top: 10px;
+}
+
+/* ==============================================================================
+   Tabs
+=============================================================================== */
+
+.tabs {
+  position: relative;   
+  min-height: 200px; /* This part sucks */
+  clear: both;
+  margin: 25px 0;
+}
+.tab {
+  float: left;
+}
+.tab label {
+  background: #eee; 
+  padding: 10px; 
+  border: 1px solid #ccc; 
+  margin-left: -1px; 
+  position: relative;
+  left: 1px; 
+}
+.tab [type=radio] {
+  display: none;   
+}
+.content {
+  position: absolute;
+  top: 40px;
+  left: 0;
+  background: white;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  border: 1px solid #ccc; 
+}
+[type=radio]:checked ~ label {
+  background: white;
+  border-bottom: 1px solid white;
+  z-index: 2;
+}
+[type=radio]:checked ~ label ~ .content {
+  z-index: 1;
 }
