--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,7 +10,17 @@ body {
 .text-lgrey { color: #ccc; }
 .text-bold { font-weight: bold; }
 
-.clickable { cursor: pointer;}
+.clickable { cursor: pointer; }
+
+.center-vertical {
+    float:none;
+    display:inline-block;
+    vertical-align:middle;
+    margin-right:-4px;
+}
+.full-height {
+    height: 100%;
+}
 
 a.text-decor-none, a:active.text-decor-none, a:hover.text-decor-none, a:visited.text-decor-none { text-decoration:none; }
 
@@ -238,11 +248,14 @@ body {
 {
     margin-top: 20px;
     padding: 40px 0px 20px 0px;
-    background-color: #f7f7f7;
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
+@media (max-width: 767px) {
+    .account-wall {
+        margin-top: 0px;
+        padding: 20px 0px 0px 0px;
+    }
+}
+
 .login-title
 {
     color: #555;
